# deez-dots

./: .gitignore  Makefile  README.md  deez  deez.1.scd  deez.py  pyproject.toml
deez_dots/: __init__.py  __main__.py  cli.py  core.py  ui.py
deez_dots/commands/: __init__.py  backup.py  base.py  cache.py  deps.py  dots.py
example/: archives.toml  dots-hub.toml  dots.toml  hyprland.toml  temp.toml
test/: test_deez.py
