[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deez-dots"
version = "0.1.0"
description = "Dotfiles deployment manager for The HyDE Project."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["dotfiles", "configuration", "deployment"]

[project.urls]
Homepage = "https://github.com/HyDE-Project/deez-dots"
Source = "https://github.com/HyDE-Project/deez-dots"

[project.scripts]
deez = "deez:run_entrypoint"

[tool.setuptools]
py-modules = ["deez"]

[tool.setuptools.packages.find]
include = ["deez_dots", "deez_dots.*"]
